--- a/pom.xml
+++ b/pom.xml
@@ -190,6 +190,14 @@
             <version>1.2.17</version>
         </dependency>
 
+        <!-- jwt -->
+        <dependency>
+            <groupId>com.auth0</groupId>
+            <artifactId>java-jwt</artifactId>
+            <version>3.12.0</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
